--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,44 @@
-@import './base.css';
+@import "./base.css";
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lily+Script+One&display=swap");
 
-#app {
-  max-width: 1280px;
+#container {
+  max-width: 1380px;
+  height: 100vh;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1.5rem;
   font-weight: normal;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
+#app {
+  height: 100%;
+}
+
+h1 {
+  font-family: Inter;
+  font-size: 43.841px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+h2 {
+  color: var(--color-head-c);
+  font-family: Inter;
+  font-size: 43.841px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+  text-transform: uppercase;
 }
 
 @media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
 }
 
 @media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+  #container {
+    /* display: grid;
+    grid-template-columns: 1fr 1fr; */
+    padding: 2rem;
   }
 }
