--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -32,6 +32,14 @@ h2 {
   text-transform: uppercase;
 }
 
+h3 {
+  font-family: Inter;
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: normal;
+}
+
 @media (hover: hover) {
 }
 
